--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = '3.11.*'
 fastapi = "^0.102.0"
 uvicorn = "^0.23.2"
 pydantic = {extras = ["email"], version = "^2.3.0"}
+sqlalchemy = "^2.0.20"
+pydantic-settings = "^2.0.3"
+alembic = "^1.11.3"
 
 
 [tool.poetry.group.dev.dependencies]
