--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ ruff = "^0.0.286"
 httpx = "^0.24.1"
 isort = "^5.12.0"
 rich = "^13.5.2"
+factory-boy = "^3.3.0"
+freezegun = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core"]
